rollout/canary/header/httproute-api.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: argo-rollouts-header-route
  namespace: default
spec:
  parentRefs:
    - name: http
      namespace: istio-system
  hostnames:
  - "header.rejekts.kubespaces.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-rollouts-stable-service
      kind: Service
      port: 80
    - name: argo-rollouts-canary-service
      kind: Service
      port: 80
